<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vandyapps.pubandroid.MainActivity">

    <TextView
        android:text="@string/title_pub_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pub_status" />

        <TextView
            android:id="@+id/pub_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pub_status_closed" />

    </LinearLayout>

    <Button
        android:onClick="checkOrdersClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_check_orders" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_menu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_hours" />

</LinearLayout>
